--- a/src/style.css
+++ b/src/style.css
@@ -1,28 +1,41 @@
 body {
-    background-color: #f9f7fe;
-    font-family: "Roboto", sans-serif;
+     font-family: "Roboto", sans-serif;
   }
   
   a {
-    color: #885df1;
-  }
-  
-  .weather-app {
-    background: white;
-    max-width: 600px;
     margin: 45px auto;
-    box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+    margin: 45px auto;
+    color:rgba(134, 8, 251, 0.9) ;
+  }
+  #city {
+    color: rgb(126, 22, 190);
+  }
+  #background-video {
+    position:fixed;
+    top: 0;
+    left: 0;
+   min-height: 100%;
+  width: 100%;
+    z-index: -100;
+    opacity: 0.8;
+    
+  }
+  .weather-app {
+    background: transparent;
+    width: 700px;
+    margin: 45px auto;
+    box-shadow: 0 30px 50px rgba(245, 150, 7, 0.197);
     border-radius: 16px;
     padding: 30px;
   }
   
   header {
-    border-bottom: 1px solid #f9f7fe;
+    border-bottom: 1px solid #f15f05;
     padding: 0 0 30px 0;
   }
   
   .search-form-input {
-    background-color: #f9f7fe;
+    background-color: #9f9a9e;
     border: none;
     border-radius: 6px;
     width: 80%;
@@ -31,13 +44,13 @@ body {
   }
   
   .search-form-button {
-    background: #885df1;
+    background:rgb(235, 7, 193);
     padding: 15px 30px;
     border: none;
     font-size: 16px;
     margin-left: 5px;
     border-radius: 6px;
-    color: white;
+    color:black;
   }
   
   main {
@@ -51,23 +64,24 @@ body {
   
   .weather-app-city {
     margin: 0;
-    font-size: 38px;
+    font-size: 40px;
     line-height: 48px;
   }
   
   .weather-app-details {
-    font-size: 16px;
-    color: rgba(39, 33, 66, 0.4);
+    font-size: 20px;
+    color:antiquewhite;
     line-height: 24px;
     font-weight: 500;
   }
   
   .weather-app-details strong {
-    color: #f65282;
+    color: #f65a07;
   }
   
   .weather-app-temperature-container {
     display: flex;
+    color: antiquewhite;
   }
   
   .weather-app-icon {
@@ -94,8 +108,8 @@ body {
   
   .weather-forecast-date {
     text-align: center;
-    color: rgba(39, 33, 66, 0.4);
-    font-size: 16px;
+    color: antiquewhite;
+    font-size: 18px;
     line-height: 20px;
     margin-bottom: 10px;
   }
@@ -108,7 +122,7 @@ body {
   }
   .weather-forecast-temperatures {
     text-align: center;
-    color: #f65282;
+    color: #fa5b05;
     margin-top: 10px;
     display: flex;
     justify-content: center;
@@ -119,9 +133,9 @@ body {
   }
   
   footer {
-    border-top: 1px solid #f9f7fe;
+    border-top: 1px solid #f15f05;
     padding: 30px 0 0 0;
     text-align: center;
-    font-size: 14px;
-    color: rgba(0, 0, 0, 0.6);
+    font-size: 16px;
+    color: rgba(235, 7, 193);
   }
